--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,38 @@
 build
 dist
 REST.egg-info
+
+*.egg
+*.egg-info
+eggs
+.eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+__pycache__
+
+*__pycache__
+
+pip-log.txt
+
+.coverage
+.nox
+.cache
+.pytest_cache
+
+.DS_Store
+
+.idea
+
+*~
+
+coverage.xml
+*sponge_log.xml
+
+pylintrc
+pylintrc.test
